# adaptive-learning

./: .gitignore  .npmrc  AGENTS.md  CHANGELOGS.md  CLAUDE.md  LICENSE  PROJECT_STATUS.md  README.md  improve.md  package.json  pnpm-lock.yaml
backend/: .env.example  .vercelignore  API_DOCUMENTATION.md  API_GUIDES.md  CHANGES.md  ENTITY_RELATIONSHIPS.md  IMPLEMENTATION_SUMMARY.md  README.md  README_UPLOAD.md  SETUP.md  SETUP_R2.md  alembic.ini  check_indices.py  debug_search.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json
backend/alembic/: README  env.py
backend/api/: dependencies.py
backend/core/: __init__.py  config.py  database.py  errors.py  rate_limit.py  security.py  token_blacklist.py
backend/db/: index.ts  schema.ts
backend/docker/: docker-compose.full.yaml
backend/drizzle/: 0020_perpetual_kulan_gath.sql  0021_stale_the_stranger.sql
backend/models/: __init__.py  assessment_config.py  course.py  enrollment.py  exercise.py  knowledge_point.py  knowledge_point_prerequisite.py  kp_exercise.py  kp_question.py  kp_relation.py  kp_resource.py  mastery.py  mastery_history.py  module.py  profile.py  question.py  resource.py  section.py  student_mastery.py  user.py
backend/repositories/: __init__.py  base_repo.py  course_repo.py  kp_repo.py  mastery_repo.py  module_repo.py  profile_repo.py  section_repo.py  user_repo.py
backend/schemas/: __init__.py  auth_schema.py  course_schema.py  enrollment_schema.py  exercise_schema.py  kp_schema.py  mastery_schema.py  module_schema.py  profile_schema.py  question_schema.py  resource_schema.py  search_schema.py  section_schema.py  (+2 more)
(+1042 files in other folders)
